--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "private": true,
   "dependencies": {
     "antd": "^2.7.0",
+    "history": "^1.11.1",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
-    "react-scripts": "1.0.12",
+    "react-responsive-carousel": "https://github.com/lishoulong/react-responsive-carousel.git",
     "react-router": "^2.8.1",
-    "history": "^1.11.1"
+    "react-scripts": "1.0.12",
+    "react-slick": "^0.15.4"
   },
   "scripts": {
     "start": "react-scripts start",
